--- a/index.html
+++ b/index.html
@@ -10,5 +10,21 @@
      <h1>Lakshmi Kalyani Chilakapati</h1>
     <h3>The Cleveland Museum of Art</h3>
     <p>Some of the must watch things are <b>Asian art</b> and <b>African art</b></p>
+    <hr>
+    <h2>Travel directions</h2>
+    <p>The nearest airport to the Cleveland Museum is the <b>Cleveland Airport (CLE)</b></p>
+    <ol>
+        <li>There are many travel options available from airport to the museum </li>
+        <li>One of them is by using a public transport. Some of them are :
+        <ol>
+            <li>Taxi is the fastest one to reach the cleveland museum of art.</li>
+            <li>Starting from the airport go straight in the line 23.</li>
+            <li>Enter in to the line 71 in the berea fwy road.</li>
+        </ol>
+        </li>
+        <li>continue in the 71 line through Linndale and take right from there.</li>
+        <li>In between tremont will come and exit from the line 71.</li>
+        <li>enter in to the line 90 through Martin Luther King Jr Dr and the Museum will arives The cleveland  museum of Art.</li>
+    </ol>
 </body>
 </html>
