Added must watch things

--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
         <li>In between tremont will come and exit from the line 71.</li>
         <li>enter in to the line 90 through Martin Luther King Jr Dr and the Museum will arives The cleveland  museum of Art.</li>
     </ol>
+    <p>Some of the other locations around the museum to watch are :</p>
+    <ul>
+        <li>Cleveland Museum of Natural History</li>
+        <li>Museum of Contemporary Art</li>
+        <li>Cleveland Botanical Garden</li>
+        <li>Western Reserve Historical Society</li>
+        <li>Lake View Cemetery </li>
+    </ul>
 </body>
 </html>
