--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
         <li>Western Reserve Historical Society</li>
         <li>Lake View Cemetery </li>
     </ul>
+    <a href="./aboutme.html">About me</a>
 </body>
 </html>
