Places Must Visit

--- a/index.html
+++ b/index.html
@@ -35,5 +35,36 @@
         <li>Lake View Cemetery </li>
     </ul>
     <a href="./aboutme.html">About me</a>
+    <hr>
+    <h2>Travel Recommendations</h2>
+    <p>The below are some of the cities that I would personally recommend to travel once in your life time </p>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Important location</th>
+            <th>Time to spent</th>
+            
+        </tr>
+        <tr>
+            <td>Cleveland</td>
+            <td>cleveland museum of art</td>
+            <td>5 hours</td>
+        </tr>
+        <tr>
+            <td>Canberra</td>
+            <td>Parliament House</td>
+            <td>12 hours</td>
+        </tr>
+        <tr>
+            <td>Hyderabad</td>
+            <td>Romoji Film City</td>
+            <td>15 hours</td>
+        </tr>
+        <tr>
+            <td>Kolkata</td>
+            <td>Howrah Bridge</td>
+            <td>1 hours</td>
+        </tr>
+    </table>
 </body>
 </html>
