--- a/index.html
+++ b/index.html
@@ -66,5 +66,26 @@
             <td>1 hours</td>
         </tr>
     </table>
+    <hr>
+    <h2>Code display</h2>
+    <blockquote>Find first image from post content with wordpress</blockquote>
+    <a href="https://stackoverflow.com/questions/47904525/find-first-image-from-post-content-with-wordpress">Stackoverflow discussion</a>
+    <pre>
+        <code>
+            function catch_that_image() {
+                global $post, $posts;
+                $first_img = '';
+                ob_start();
+                ob_end_clean();
+                $output = preg_match_all('/<img.+?src=[\'"]([^\'"]+)[\'"].*?>/i', $post->post_content, $matches);
+                $first_img = $matches[1][0];
+              
+                if(empty($first_img)) {
+                  $first_img = "/path/to/default.png";
+                }
+                return $first_img;
+              }
+        </code>
+    </pre>
 </body>
 </html>
