--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Webapps</title>
 </head>
 <body>
+    <a href="./bonus.html">BONUS</a>
      <h1>Lakshmi Kalyani Chilakapati</h1>
     <h3>The Cleveland Museum of Art</h3>
     <p>Some of the must watch things are <b>Asian art</b> and <b>African art</b></p>
